--- a/index.html
+++ b/index.html
@@ -104,26 +104,29 @@
             <div class="resume-container">
                 <div class="resume-column">
                     <h3 class="resume-column-title">My Education</h3>
-                    
+
                     <div class="resume-item">
                         <h2 class="resume-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institution">Harvard University / 2015 - 2017</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h2 class="resume-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institution">Harvard University / 2015 - 2017</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h2 class="resume-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institution">Harvard University / 2015 - 2017</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
 
                 </div>
@@ -133,22 +136,25 @@
                     <div class="resume-item">
                         <h2 class="resume-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institution">Harvard University / 2015 - 2017</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h2 class="resume-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institution">Harvard University / 2015 - 2017</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h2 class="resume-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institution">Harvard University / 2015 - 2017</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -161,7 +167,8 @@
     <footer>
         <div class="footer-column">
             <h3 class="section-title">Lets Connect</h3>
-            <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <p class="section-description">Please fill out the form on this section to contact with me or call between
+                9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
             <div class="social-links">
                 <a href=""><img src="images/icons/facebook.png" alt=""></a>
                 <a href=""><img src="images/icons/twitter.png" alt=""></a>
@@ -170,6 +177,13 @@
         </div>
         <div class="footer-column">
             <h3 class="section-title">Let's Message Me</h3>
+            <form action="" class="contact">
+                <input type="text" placeholder="Your Name">
+                <input type="email" name="" placeholder="Your Email" id="">
+                <textarea name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+            </form>
+
         </div>
     </footer>
 
